--- a/templates/liked.html
+++ b/templates/liked.html
@@ -15,18 +15,25 @@
     <div class="accordion">
         {% for item in items %}
         <div class="accordion-item">
-            <div class="title-container">
+            <div class="title-container" style="float: left; width: 100%;">
                 <button class="accordion-button collapsed" data-bs-toggle="collapse"
                     data-bs-target="#panelsStayOpen-c-{{ item.id }}">
                     <span class="display-1 body-text title-text"><strong>
                             {{ item.title }}
-                        </strong></span>
+                        </strong>
+                    </span>
+                    <div class="media-container">
+                        <div class="like-container">
+                            <img src="static/images/{{ item.liked }}.png" alt="like" class="like" id="{{ item.id }}"
+                                name="{{ item.liked }}" onclick="toggleLikes(this)">
+                            <span id="counter-{{ item.id }}">{{ item.likes }}</span>
+                        </div>
+                        <div class="fb-container">
+                            <div class="fb-share-button" data-href="{{ url_for('recipes', _external=True) }}"
+                                data-layout="button_count" data-size="small"></div>
+                        </div>
+                    </div>
                 </button>
-            </div>
-            <div class="like-container">
-                <img src="static/images/{{ item.liked }}.png" alt="like" class="like" id="{{ item.id }}"
-                    name="{{ item.liked }}" onclick="toggleLikes(this)">
-                <span id="counter-{{ item.id }}">{{ item.likes }}</span>
             </div>
             <div id="panelsStayOpen-c-{{ item.id }}" class="accordion-collapse collapse">
                 <div class="accordion-body" style="text-align: left;">
