--- a/templates/results.html
+++ b/templates/results.html
@@ -18,7 +18,8 @@
                                 {{ item.title }}
                             </strong></span>
                 </button>
-            </div><div class="media-container">
+            </div>
+            <div class="media-container">
                 <div class="like-container">
                     <img src="static/images/{{ item.liked }}.png" alt="like" class="like" id="{{ item.id }}" name="{{ item.liked }}" onclick="toggleLikes(this)">
                     <span id="counter-{{ item.id }}">{{ item.likes }}</span>
